# pose_estimation_tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: index-CfGVjxuJ.js  index-DEXrb6B2.css  pose_estimation_wasm-Ci88pkmH.js
models/: README.md
src/: camera.ts  main.ts  pose.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  model.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
