[package]
name = "pose-estimation"
version = "0.1.0"
edition = "2021"

[lib]
name = "pose_estimation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = [] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"

tract-onnx = "0.21"

# image decoding (JPEG frames from frontend)
image    = { version = "0.25", default-features = false, features = ["jpeg"] }

# base64 decode of captured frames
base64   = "0.22"

[profile.release]
opt-level = "s"
strip = true
lto = true
