[package]
name = "pose-estimation"
version = "0.1.0"
edition = "2021"

[lib]
name = "pose_estimation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri      = { version = "2.11.2", features = [] }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

tract-onnx   = "0.21"
tract-linalg = { version = "0.21", features = ["multithread-mm"] }

# image decoding (JPEG frames from frontend)
image    = { version = "0.25.10", default-features = false, features = ["jpeg"] }

# base64 decode of captured frames
base64   = "0.22.1"

[profile.release]
opt-level = "s"
strip = true
lto = true
