[package]
name = "pose-estimation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen  = "0.2"
serde-wasm-bindgen = "0.6"
serde         = { version = "1", features = ["derive"] }
tract-onnx    = "0.21"
image         = { version = "0.25", default-features = false, features = ["jpeg"] }
base64        = "0.22"
getrandom     = { version = "0.2", features = ["js"] }
