[package]
name = "pose-estimation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen       = "0.2.122"
serde-wasm-bindgen = "0.6.5"
serde              = { version = "1.0.228", features = ["derive"] }
tract-onnx         = "0.21"
tract-linalg       = { version = "0.21", features = ["multithread-mm"] }
image              = { version = "0.25.10", default-features = false, features = ["jpeg"] }
getrandom          = { version = "0.2", features = ["js"] }
